#65 [update] 画面が650px以下で背景色が白色になるようにした

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -10,6 +10,12 @@ body {
   background-color: rgb(247, 247, 252);
 }
 
+@media not all and (min-width: 640px) {
+  body {
+    background-color: white
+  }
+}
+
 a {
   color: #262338;
 }
