#60 [update] 画面がsm以下でshadowを削除

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto my-8 p-6 sm:w-8/12 sm:rounded">
+<div class="bg-white sm:shadow mx-auto my-8 p-6 sm:w-8/12 sm:rounded">
   <div class="user_input_area">
     <h3 class="font-semibold">プロフィール編集</h3>
     <%= form_with model: @user, url: profiles_path do |f| %>
