--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto sm:mt-8 sm:mb-3 py-6 px-10 sm:w-8/12 sm:rounded">
+<div class="bg-white sm:shadow mx-auto sm:mt-8 sm:mb-3 py-6 px-10 sm:w-8/12 sm:rounded">
   <h2>Resend confirmation instructions</h2>
 
   <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
