--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto sm:mt-8 sm:mb-3 py-6 px-10 sm:w-8/12 sm:rounded">
+<div class="bg-white sm:shadow mx-auto sm:mt-8 sm:mb-3 py-6 px-10 sm:w-8/12 sm:rounded">
 
   <h2>Forgot your password?</h2>
 
