--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto sm:mt-8 sm:mb-3 py-6 px-10 sm:w-8/12 sm:rounded">
+<div class="bg-white sm:shadow mx-auto sm:mt-8 sm:mb-3 py-6 px-10 sm:w-8/12 sm:rounded">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
