--- a/app/views/diaries/new.html.erb
+++ b/app/views/diaries/new.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   <% end %>
 </div>
-<div class="bg-white shadow mx-auto sm:my-8 p-6 max-md:pb-20 sm:w-8/12 sm:rounded">
+<div class="bg-white sm:shadow mx-auto sm:my-8 p-6 max-md:pb-20 sm:w-8/12 sm:rounded">
   <h1 class="font-semibold text-base">日記投稿</h1>
   <%= render "diaries/form", model: @diary %>
 </div>
