--- a/app/views/exam_questions/show.html.erb
+++ b/app/views/exam_questions/show.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white shadow mx-auto my-8 p-6 sm:w-8/12 sm:rounded">
+<div class="bg-white sm:shadow mx-auto my-8 p-6 sm:w-8/12 sm:rounded">
   <div class="exam_area">
     <p><span>「<%= @exam_question.word.japanese_word %>」</span>の英語訳は？</p>
     <%= form_with model: @exam_question, url: exam_question_path do |f| %>
