#10 [update] 使用していないクラスを削除

--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -9,11 +9,11 @@
           </div>
         </div>
         <div class="word">
-          <div class="japanese_word">
+          <div>
             <%= word.japanese_word %>
           </div>
         </div>
-        <div class="english_word mb-3">
+        <div class="mb-3">
           <%= word.english_word %>
         </div>
         <% if word.memo.present? %>
