--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -28,7 +28,7 @@
           <%#= link_to "編集", edit_word_path(word.id) %>
         </div>
         <div class="link text-end">
-          <%= link_to "日記へ", diary_path(id: word.diary_id), class:"text-white px-3 py-1.5 bg-blue-600 hover:bg-blue-700 hover:text-white rounded" %>
+          <%= link_to "日記へ", diary_path(id: word.diary_id), class:"text-white px-3 py-1.5 bg-gray-300 hover:bg-gray-400 hover:text-white rounded" %>
         </div>
       </div>
     <% end %>
