--- a/app/views/diaries/show.html.erb
+++ b/app/views/diaries/show.html.erb
@@ -33,6 +33,6 @@
   </div>
   <div class="link text-end">
     <%= link_to "編集", edit_diary_path(@diary.id) %>
-    <%= button_to "削除", diary_path(@diary.id), form: { data: { turbo_confirm: "本当に削除しますか？" }, method: :delete } %>
+    <%= button_to "削除", diary_path(@diary.id), form: { data: { turbo_confirm: "本当に削除しますか？" }, method: :delete, class:"hover:font-bold" } %>
   </div>
 </div>
