#20 [update] margin-bottomを追加

--- a/app/views/diaries/index.html.erb
+++ b/app/views/diaries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="my-8 index_container">
+<div class="my-8 mb-24 index_container">
   <div class="min-h-full">
     <% @diaries.each do |diary| %>
       <div class="bg-white shadow mx-auto mt-3 mb-3 p-8 sm:w-8/12 sm:rounded">
