--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,4 +1,4 @@
-<div class="index_container">
+<div class="mb-24 index_container">
   <h2 class="font-semibold text-center my-6"><%= current_user.username %>さんの単語帳</h2>
   <div class="diaries">
     <% @words.each do |word| %>
